Issue #13473, #13403: search alignment and theming

--- a/sites/all/themes/slac/sass/_layout.sass
+++ b/sites/all/themes/slac/sass/_layout.sass
@@ -767,6 +767,9 @@ ul.tabs, .action-links,
     p
       margin-bottom: 5px
 
+  .pane-2
+    display: block
+    clear: both
 
 
 +at-breakpoint($less-than-800)
@@ -2876,6 +2879,8 @@ h2
 /* IntOrg profile styles */
 
 .page-basic-io
+  a:hover
+    color: $dark-blue
   .top-wrapper
     background: url('../images/header-bg.jpg') center no-repeat
     background-size: cover
@@ -3307,3 +3312,55 @@ h2
         margin-bottom: 7px
         font-size: 1.1rem
         color: #46494b
+
+
+
+
+
+
+
+
+
+.page-basic-io .user-search
+  .chosen-container
+    display: block
+    width: 100%
+    padding: 0
+    font-size: 10px
+    color: #919191
+    text-transform: uppercase
+    font-weight: bold
+    display: block
+    cursor: default
+    .chosen-single
+      color: #919191
+      display: block
+      padding: 0 9px
+      height: 22px
+      line-height: 22px
+      position: relative
+      &:after
+        content: ""
+        width: 22px
+        height: 22px
+        position: absolute
+        right: 0
+        top: 0
+        background: url("../images/chosen-sprite.png") no-repeat 6px 2px
+        border-left: 1px solid #e1e1e1
+    .chosen-search
+      display: none
+    .chosen-drop
+      border-top: 1px solid #e1e1e1
+      background: #efefef
+      margin: 0 -1px
+      display: none
+      padding: 0
+      li
+        padding: 7px 9px
+        &.result-selected,
+        &.highlighted
+          background: #2382c9
+          color: #fff
+    &.chosen-with-drop .chosen-drop
+      display: block
